fixed Missing semicolon in recent align-wide compatibility CSS. fixes #707

--- a/assets/front/css/_parts/0_5_single_post_page.css
+++ b/assets/front/css/_parts/0_5_single_post_page.css
@@ -292,7 +292,7 @@ a + span.hu-external:after {
 }
 .full-width.col-1c .wp-block-cover-image.alignfull:not(.has-parallax) {
     left: 50%;
-    -moz-transform: translateX(-50)
+    -moz-transform: translateX(-50);
     -webkit-transform: translateX(-50);
     transform: translateX(-50%);
 }
